@@ -1,51 +1,65 @@
 package com.handson.CalenderGPT.config;
 
+import com.handson.CalenderGPT.google.oauth.GoogleOAuthSuccessHandler;
 import com.handson.CalenderGPT.jwt.JwtAuthenticationEntryPoint;
 import com.handson.CalenderGPT.jwt.JwtRequestFilter;
-import com.handson.CalenderGPT.google.oauth.GoogleOAuthSuccessHandler;
-import jakarta.servlet.Filter;
-import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 import org.springframework.web.filter.ForwardedHeaderFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
 
     private final JwtRequestFilter jwtRequestFilter;
     private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     private final GoogleOAuthSuccessHandler googleOAuthSuccessHandler;
-    private final ClientRegistrationRepository clientRegistrationRepository;
+
+    @Autowired
+    public SecurityConfig(
+            JwtRequestFilter jwtRequestFilter,
+            JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint,
+            GoogleOAuthSuccessHandler googleOAuthSuccessHandler
+    ) {
+        this.jwtRequestFilter = jwtRequestFilter;
+        this.jwtAuthenticationEntryPoint = jwtAuthenticationEntryPoint;
+        this.googleOAuthSuccessHandler = googleOAuthSuccessHandler;
+    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 // CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // CSRF לא רלוונטי כי אנחנו עובדים JWT
+                .cors(Customizer.withDefaults())
+
+                // CSRF כבוי: אנחנו סטייטלס עם JWT
                 .csrf(csrf -> csrf.disable())
-                // Stateless
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // Authentication errors
-                .exceptionHandling(e -> e.authenticationEntryPoint(jwtAuthenticationEntryPoint))
-                // Authorization rules
-                .authorizeHttpRequests(authz -> authz
+
+                // 401 במקום redirect
+                .exceptionHandling(ex -> ex.authenticationEntryPoint(jwtAuthenticationEntryPoint))
+
+                // סטייטלס
+                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // הרשאות
+                .authorizeHttpRequests(auth -> auth
+                        // לאפשר Preflight
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // נתיבים ציבוריים (פתוחים):
                         .requestMatchers(
                                 "/api/oauth2/authorization/**",
                                 "/api/login/oauth2/**",
@@ -57,45 +71,49 @@ public class SecurityConfig {
                                 "/api/health",
                                 "/actuator/health"
                         ).permitAll()
+
+                        // כל היתר דורש אימות
                         .anyRequest().authenticated()
                 )
-                // OAuth2 login
+
+                // OAuth2 Login (אם בשימוש; אפשר להשאיר מינימלי)
                 .oauth2Login(oauth2 -> oauth2
-                        .authorizationEndpoint(a ->
-                                a.authorizationRequestResolver(
-                                        new CustomAuthorizationRequestResolver(clientRegistrationRepository)
-                                )
-                        )
+                        .authorizationEndpoint(ae -> ae.baseUri("/api/oauth2/authorization"))
+                        .redirectionEndpoint(re -> re.baseUri("/api/login/oauth2/code/*"))
                         .successHandler(googleOAuthSuccessHandler)
-                )
-                // הוספת פילטר JWT לפני UsernamePasswordAuthenticationFilter
-                .addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
+                );
+
+        // JWT לפני UsernamePasswordAuthenticationFilter
+        http.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
-    }
-
-    @Bean
-    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowCredentials(true);
-
-        // 👇 כאן תכניס את הכתובות שאתה באמת רוצה לאפשר (פרונט ב־S3/CloudFront + לוקאלי)
-        configuration.setAllowedOrigins(List.of(
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration c = new CorsConfiguration();
+        // עדכן את הרשימה לפי הדומיינים שלך (כולל www)
+        c.setAllowedOrigins(List.of(
                 "https://ec2-stage.calendargpt.org",
-                "https://calendargpt.runmydocker-app.com",
-                "http://localhost:3000"
+                "https://calendargpt.org",
+                "https://www.calendargpt.org"
         ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+        c.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+        c.setAllowedHeaders(List.of("*"));
+        c.setExposedHeaders(List.of("Authorization","Location","Set-Cookie"));
+        c.setAllowCredentials(true);
+        c.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
+        UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
+        src.registerCorsConfiguration("/api/**", c);
+        src.registerCorsConfiguration("/oauth2/**", c);
+        src.registerCorsConfiguration("/login/oauth2/**", c);
+        src.registerCorsConfiguration("/actuator/**", c);
+        src.registerCorsConfiguration("/api/swagger-ui/**", c);
+        src.registerCorsConfiguration("/api/v3/api-docs/**", c);
+        src.registerCorsConfiguration("/api/oauth2/**", c);
+        src.registerCorsConfiguration("/api/login/oauth2/**", c);
+        return src;
     }
+
 }
